--- a/Nav.css
+++ b/Nav.css
@@ -25,11 +25,11 @@ nav li {
    list-style: none;
    text-decoration: none;
 
-   font-size: 2.0vw;
+   font-size: 2.0vh;
    color: lightgrey;
 
    margin-left: 2%;
-   margin-top 5px;
+   margin-top: 15px;
    margin-bottom: 5px;
 }
 
@@ -57,7 +57,7 @@ nav a:visited {
 
 nav a:visited:hover {
    color: red;
-   
+
    list-style: none;
    text-decoration: none;
 }
