--- a/Main.css
+++ b/Main.css
@@ -44,6 +44,8 @@ footer {
    margin-left: 15%;
    margin-right: 10%;
    margin-bottom: 15px;
+
+   padding-left: 15px;
    
    min-height: 50px;
 }
