--- a/Nav.css
+++ b/Nav.css
@@ -7,7 +7,7 @@ nav {
    border-radius: 15px 0 0 15px;
 
    left: 0.5%;
-   right: 85%;
+   right: 80%;
 }
 
 nav ul{
@@ -25,7 +25,7 @@ nav li {
    list-style: none;
    text-decoration: none;
 
-   font-size: 2.5vh;
+   font-size: 2.0vw;
    color: lightgrey;
 
    margin-left: 2%;
