--- a/Main.css
+++ b/Main.css
@@ -20,10 +20,21 @@ body {
    text-align: center;
 }
 
-main {
-   margin-left: 20%;
-   margin-right: 5vw;
+@media only screen and (min-width: 50px) {
+   main {
+      margin-left: 35%;
+      margin-right: 1vw;
+   }
+}
 
+@media only screen and (min-width: 800px) {
+   main {
+      margin-left:  20%;
+      margin-right: 5vw;
+   }
+}
+
+main {
    padding-bottom: 15px;
 
    background: inherit;
