--- a/Posts.css
+++ b/Posts.css
@@ -36,10 +36,23 @@
    padding-right: 5px;
 }
 
+@media only screen and (min-width: 50px) {
+
+   .post_content video
+   {
+      width: 100%;
+   }
+}
+
+@media only screen and (min-width: 800px) {
+
+   .post_content video
+   {
+      width: 60%;
+   }
+}
 .post_content video{
    float: left;
    margin-right: 15px;
    margin-bottom: 5px;
-
-   width: 52vw;
 }
