--- a/Main.css
+++ b/Main.css
@@ -20,14 +20,12 @@ body {
    text-align: center;
 }
 
-@media only screen and (min-width: 50px) {
-   main {
-      margin-left: 35%;
-      margin-right: 1vw;
-   }
+main {
+   margin-left: 35%;
+   margin-right: 1vw;
 }
 
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 40em) {
    main {
       margin-left:  20%;
       margin-right: 5vw;
