--- a/Posts.css
+++ b/Posts.css
@@ -36,15 +36,12 @@
    padding-right: 5px;
 }
 
-@media only screen and (min-width: 50px) {
-
-   .post_content video
-   {
-      width: 100%;
-   }
+.post_content video
+{
+   width: 100%;
 }
 
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 40em) {
 
    .post_content video
    {
