--- a/Nav.css
+++ b/Nav.css
@@ -39,7 +39,7 @@ nav li {
    font-size: 3.5vw;
 }
 
-@media only screen and (min-width: 40em) {
+@media only screen and (min-width: 801px) {
    
    nav {
       left: 5.5vw;
