--- a/Posts.css
+++ b/Posts.css
@@ -41,7 +41,7 @@
    width: 100%;
 }
 
-@media only screen and (min-width: 40em) {
+@media only screen and (min-width: 801px) {
 
    .post_content video
    {
