--- a/Main.css
+++ b/Main.css
@@ -25,7 +25,7 @@ main {
    margin-right: 1vw;
 }
 
-@media (min-width: 51em) {
+@media screen and (min-width: 51em) {
    main {
       margin-left:  20%;
       margin-right: 5vw;
