--- a/Main.css
+++ b/Main.css
@@ -23,16 +23,6 @@ body {
 main {
    margin-left: 35%;
    margin-right: 1vw;
-}
-
-@media screen(any-hover) {
-   main {
-      margin-left:  20%;
-      margin-right: 5vw;
-   }
-}
-
-main {
    padding-bottom: 15px;
 
    background: inherit;
@@ -40,6 +30,13 @@ main {
 
    border-style: solid;
    border-width: 1px;
+}
+
+@media not screen and(hover: none) {
+   main {
+      margin-left:  20%;
+      margin-right: 5vw;
+   }
 }
 
 footer {
