--- a/Nav.css
+++ b/Nav.css
@@ -2,10 +2,8 @@ nav {
    left: 1.5vw;
    right: 65%;
    position: fixed;
-   max-height: 100%;
 
    background-color: #77777777;
-
    border: solid 1px;
    border-radius: 15px 0 0 15px;
 }
@@ -22,12 +20,11 @@ nav ul{
 }
 
 nav li {
-   font-size: 4.5vw;
+   font-size: 5.5vh;
    color: lightgrey;
 
    margin-left: 2%;
-   margin-top: 15px;
-   margin-bottom: 5px;
+   margin-top: 5px;
    
    text-decoration: none;
    list-style: none;
@@ -41,7 +38,7 @@ nav li {
    }
 
    nav li {
-      font-size: 1.5vw;
+      font-size: 3vh;
    }
 }
 
