--- a/Nav.css
+++ b/Nav.css
@@ -30,7 +30,7 @@ nav li {
    list-style: none;
 }
 
-@media not screen and (orientation: landscape) {
+@media screen and (orientation: landscape) {
    font-size: 4.5vh;
 }
 
