--- a/Nav.css
+++ b/Nav.css
@@ -30,7 +30,7 @@ nav li {
    list-style: none;
 }
 
-@media screen and (orientation: landscape) {
+@media screen and (orientation: portrait) {
    font-size: 2.5vh;
 }
 
