--- a/Posts.css
+++ b/Posts.css
@@ -8,7 +8,7 @@
    margin-left: 6px;
    margin-right: 6px;
 
-   background-color: #222;
+   background-color: rgba(42, 42, 42, 0.8);
    border-radius: 15px 15px 0 0;
 }
 
