--- a/HomeMain.css
+++ b/HomeMain.css
@@ -11,13 +11,13 @@ body {
 
 #title_bar {
    color: white;
-   font-size: 2vw;
+   font-size: 1vw;
    text-align: center;
 }
 
 main {
-   margin-left: 5%;
-   margin-right: 5%;
+   margin-left: 15vw;
+   margin-right: 15vw;
    padding-bottom: 15px;
 
    background: inherit;
@@ -34,8 +34,8 @@ footer {
    border: solid 1px;
    border-radius: 0 0 15px 15px;
 
-   margin-left: 5%;
-   margin-right: 5vw;
+   margin-left: 15vw;
+   margin-right: 15vw;
 
    padding-left: 15px;
    
