--- a/Contact.css
+++ b/Contact.css
@@ -13,7 +13,7 @@ main * {
 
 main p {
    text-align: center;
-   max-width: 10%;
+   max-width: 20vh;
    font-size: 3vh;
    border-radius: 20px 20px 20px 20px;
    background-color: #aa0000;
