--- a/menu.css
+++ b/menu.css
@@ -54,3 +54,35 @@
    display: block;
 }
 
+#ProjectTabs
+{ 
+   margin: 0 5vh 10px 5vw;
+}
+
+#ProjectTabs ul
+{
+   height: 6vh;
+   max-height: 6vh;
+
+   padding-right: 4vw;
+   border-radius: 15px 15px 0 0;
+   background-color: darkblue;
+   list-style-type: none;
+   
+   display: flex;
+   flex-direction: row;
+   text-align: center;
+}
+
+#ProjectTabs li
+{
+   display: relative;
+   width: 100%;
+}
+
+#ProjectTabs li:hover
+{
+   font-size: 170%;
+   border-right: solid 5px black;
+   border-left: solid 5px black;
+}
