modified:   main.css

--- a/main.css
+++ b/main.css
@@ -58,6 +58,7 @@ article ul
    justify-content: center;
    margin: 3vw 1vw 1vw 1vw;
    list-style-type: none;
+   font-size: 2vh;
 }
 
 article p 
