--- a/main.css
+++ b/main.css
@@ -34,6 +34,8 @@ article
 
    padding: 5px;
 
+   max-width: 700px;
+
    margin-left: 5vw;
    margin-right: 5vw;
    margin-bottom: 10px;
@@ -43,12 +45,13 @@ article h2
 {
    margin: 0;
    padding-left: 2%;
+   width: 100%;
    border-bottom: solid 3px #101010;
 }
 
 article img
 {
-   max-width: 45vw;
+   max-width: 55%;
    max-height: 100%;
    margin: 15px 5px 5px 5px;
    border-radius: 10px;
@@ -79,4 +82,11 @@ article .icon
    margin-left: 15px;
    width: 4vw;
    filter: invert(100%)
+}
+
+.PostWrapper
+{
+   display: flex;
+   flex-direction:row;
+   flex-wrap: wrap;
 }
