--- a/main.css
+++ b/main.css
@@ -34,7 +34,7 @@ article
    padding: 5px;
 }
 
-@media only screen and (min-width: 600px)
+@media only screen and (max-width: 600px)
 {
    article
    {
