--- a/main.css
+++ b/main.css
@@ -1,11 +1,12 @@
 *
 {
    margin: 0;
+   padding: 0;
 }
 
 p
 {
-   font-size: 1rem;
+   font-size: 2.2vh;
 }
 
 body 
@@ -19,6 +20,7 @@ body
 main
 {
    margin-left: 10vh;
+   margin-right: 3vw;
 }
 
 h1 
@@ -31,9 +33,8 @@ h1
 article
 {
    background-color: darkblue;
-   padding: 5px;
-   max-width: 45.32%;
-   margin: 5px 5px 2.5px 0;
+   flex: 0 0 49.5%;
+   margin-top: 10px;
 }
 
 @media (pointer:none), (pointer:coarse)
@@ -41,9 +42,8 @@ article
    article
    {
       background-color: darkblue;
-      padding: 5px;
-      max-width: 100%;
-      margin: 5px 5px 2.5px 0;
+      flex: 0 0 49.5%;
+      margin: 0 0 2.5px 0;
    }
 }
 
@@ -66,7 +66,7 @@ article ul
 {
    min-width: 40%;
    justify-content: center;
-   margin: 3vw 1vw 1vw 1vw;
+   margin: 2vh 0.2vw 0.5vh 1.5vw;
    list-style-type: none;
    font-size: 1.5vh;
 }
@@ -96,4 +96,5 @@ article .icon
    flex-direction:row;
    flex-wrap: wrap;
    width: 100%;
+   justify-content: space-between;
 }
