--- a/menu.css
+++ b/menu.css
@@ -60,11 +60,11 @@
 
 #ProjectTabs ul
 {
-   height: 3vh;
-   max-height: 3vh;
+   height: 4vh;
+   max-height: 4vh;
 
-   padding-right: 4vw;
-   border-radius: 15px 15px 0 0;
+   padding: 0 2% 0 2%;
+   border-radius: 25px 25px 0 0;
    background-color: darkblue;
    list-style-type: none;
    
@@ -77,6 +77,7 @@
 {
    display: relative;
    width: 100%;
+   font-size: 3vh;
 }
 
 #ProjectTabs li:hover
