--- a/main.css
+++ b/main.css
@@ -43,7 +43,7 @@ article
    {
       background-color: darkblue;
       flex: 0 0 100%;
-      margin: 0 0 2.5px 0;
+      margin-top: 10px;
    }
 }
 
