modified:   index.html 	modified:   main.css 	modified:   menu.css 	new file:   menuTabs.h 	new file:   menuTabs.js 	modified:   terminal.js

--- a/menu.css
+++ b/menu.css
@@ -49,10 +49,10 @@
    display: none;
 }
 
-#mainMenu li:hover p
-{
-   display: block;
-}
+//#mainMenu li:hover p
+//{
+//   display: block;
+//}
 
 #ProjectTabs
 { 
