--- a/main.css
+++ b/main.css
@@ -33,7 +33,7 @@ h1
 article
 {
    background-color: darkblue;
-   flex: 0 0 49.5%;
+   flex: 0 0 49.2%;
    margin-top: 10px;
 }
 
@@ -62,13 +62,20 @@ article img
    border-radius: 10px;
 }
 
+article video
+{
+   max-width: 100%;
+   margin: 15px 5px 5px 5px;
+   border-radius: 10px;
+}
+
 article ul
 {
    min-width: 40%;
    justify-content: center;
    margin: 2vh 0.2vw 0.5vh 1.5vw;
    list-style-type: none;
-   font-size: 1.5vh;
+   font-size: 90%;
 }
 
 article p 
