modified:   main.css

--- a/main.css
+++ b/main.css
@@ -75,7 +75,13 @@ article ul
    justify-content: center;
    margin: 2vh 0.2vw 0.5vh 1.5vw;
    list-style-type: none;
-   font-size: 90%;
+   font-size: 100%;
+}
+
+article li
+{
+   padding-top: 7px;
+   border-bottom: solid 3px black;
 }
 
 article p 
