--- a/main.css
+++ b/main.css
@@ -35,7 +35,6 @@ article
 {
    background-color: darkblue;
    flex: 0 0 49.2%;
-   max-width: 49.2%;
    margin-top: 10px;
 }
 
@@ -59,7 +58,7 @@ article h2
 
 article img
 {
-   max-width: 100%;
+   width: 100%;
    margin: 15px 5px 5px 5px;
    border-radius: 10px;
    align-self: center;
@@ -67,7 +66,7 @@ article img
 
 article video
 {
-   max-width: 100%;
+   width: 100%;
    margin: 15px 5px 5px 5px;
    border-radius: 10px;
    align-self: center;
