--- a/main.css
+++ b/main.css
@@ -58,6 +58,7 @@ article h2
 
 article img
 {
+   max-width: 100%;
    margin: 15px 5px 5px 5px;
    border-radius: 10px;
    align-self: center;
@@ -65,6 +66,7 @@ article img
 
 article video
 {
+   max-width: 100%;
    margin: 15px 5px 5px 5px;
    border-radius: 10px;
    align-self: center;
