--- a/main.css
+++ b/main.css
@@ -50,6 +50,7 @@ article
 
 article h2
 {
+   box-sizing: border-box;
    margin: 0;
    padding-left: 2%;
    width: 100%;
@@ -58,6 +59,7 @@ article h2
 
 article img
 {
+   box-sizing: border-box;
    max-width: 100%;
    margin: 15px 5px 5px 5px;
    border-radius: 10px;
