--- a/main.css
+++ b/main.css
@@ -51,6 +51,7 @@ article
 
 article h2
 {
+   flex: 2 1 auto;
    margin: 0;
    padding-left: 2%;
    width: 100%;
@@ -59,7 +60,6 @@ article h2
 
 article img
 {
-   max-width: 100%;
    margin: 15px 5px 5px 5px;
    border-radius: 10px;
    align-self: center;
@@ -67,7 +67,7 @@ article img
 
 article video
 {
-   max-width: 100%;
+   flex: 2 1 auto;
    margin: 15px 5px 5px 5px;
    border-radius: 10px;
    align-self: center;
