--- a/main.css
+++ b/main.css
@@ -60,6 +60,7 @@ article h2
 article img
 {
    width: 50%;
+   display: flex;
    margin: 15px 5px 5px 5px;
    border-radius: 10px;
    align-self: center;
@@ -68,6 +69,7 @@ article img
 article video
 {
    width: 50%;
+   display: flex;
    margin: 15px 5px 5px 5px;
    border-radius: 10px;
    align-self: center;
