--- a/main.css
+++ b/main.css
@@ -59,7 +59,6 @@ article h2
 
 article img
 {
-   width: 50%;
    display: flex;
    margin: 15px 5px 5px 5px;
    border-radius: 10px;
@@ -68,7 +67,6 @@ article img
 
 article video
 {
-   width: 50%;
    display: flex;
    margin: 15px 5px 5px 5px;
    border-radius: 10px;
@@ -104,6 +102,8 @@ article .head
 
 article .icon
 {
+   display: flex;
+   flex-direction: row;
    margin-left: 15px;
    width: 4vw;
    filter: invert(100%);
