--- a/main.css
+++ b/main.css
@@ -62,6 +62,7 @@ article img
 {
    display: flex;
    margin: 15px 5px 5px 5px;
+   max-width: 100%;
    border-radius: 10px;
    align-self: center;
 }
@@ -70,6 +71,7 @@ article video
 {
    display: flex;
    margin: 15px 5px 5px 5px;
+   max-width: 100%;
    border-radius: 10px;
    align-self: center;
 }
