--- a/main.css
+++ b/main.css
@@ -61,6 +61,7 @@ article img
 {
    max-width: 100%;
    display: flex;
+   flex: 0 1 auto;
    margin: 15px 5px 5px 5px;
    border-radius: 10px;
    align-self: center;
@@ -70,6 +71,7 @@ article video
 {
    max-width: 100%;
    display: flex;
+   flex: 0 1 auto;
    margin: 15px 5px 5px 5px;
    border-radius: 10px;
    align-self: center;
