--- a/main.css
+++ b/main.css
@@ -60,6 +60,7 @@ article h2
 
 article img
 {
+   display: flex;
    max-width: 100%;
    margin: 15px 5px 5px 5px;
    border-radius: 10px;
@@ -68,6 +69,7 @@ article img
 
 article video
 {
+   display: flex;
    max-width: 100%;
    margin: 15px 5px 5px 5px;
    border-radius: 10px;
