--- a/main.css
+++ b/main.css
@@ -54,7 +54,7 @@ article h2
 {
    margin: 0;
    padding-left: 2%;
-   width: 100%;
+   max-width: 100%;
    border-bottom: solid 3px #101010;
 }
 
