--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@ body
 
 main
 {
-   margin-left: 10vh;
+   margin-left: 3vw;
    margin-right: 3vw;
 }
 
@@ -35,8 +35,8 @@ h1
 
 article
 {
-   background-color: darkblue;
-   flex: 0 0 49.2%;
+   background-color: #323232;
+   flex: 0 0 24.6%;
    margin-top: 10px;
 }
 
@@ -44,7 +44,7 @@ article
 {
    article
    {
-      background-color: darkblue;
+      background-color: #323232;
       flex: 0 0 100%;
       margin-top: 10px;
    }
