--- a/menu.css
+++ b/menu.css
@@ -14,7 +14,7 @@
    height: 5vh;
    position: fixed;
    top: 0;
-   background-color: #323232;
+   background-color: #0084ff;;
 }
 
 #mainMenu ul
@@ -74,7 +74,7 @@
 
    padding: 0 2% 0 2%;
    border-radius: 25px 25px 0 0;
-   background-color: #323232;
+   background-color: #0084ff;
    list-style-type: none;
    
    display: flex;
