modified:   menu.css

--- a/menu.css
+++ b/menu.css
@@ -70,7 +70,7 @@
 
    padding: 0 2% 0 2%;
    border-radius: 25px 25px 0 0;
-   background-color: #0084ff;
+   background-color: #0061bb;
    list-style-type: none;
    
    display: flex;
