--- a/main.css
+++ b/main.css
@@ -12,6 +12,7 @@ main {
 
 a {
    text-decoration: none;
+   color: green;
 }
 
 article {
@@ -19,7 +20,7 @@ article {
 }
 
 video {
-   width: 50%;
+   height: 45vh;
 }
 
 #LANG {
