modified:   about_en.html 	modified:   main.css 	modified:   main_en.html 	new file:   main_jp.html 	new file:   skills_en.html 	deleted:    language_page_mobile.html 	deleted:    main_mobile.css

--- a/main.css
+++ b/main.css
@@ -6,6 +6,12 @@ body {
    color: white;
 }
 
+footer {
+   width: 100%;
+   text-align: center;
+   margin-bottom: 0px;
+}
+
 main {
    margin: 35px 10% 0 10%;
 }
