--- a/main.css
+++ b/main.css
@@ -35,11 +35,11 @@ video {
 
 @media (hover: none) {
    * {
-      font-size: 40%;
+      font-size: 20vw;
    }
 
    a {
-      font-size: 50%;
+      font-size: 30vw;
    }
 
    video {
