--- a/main.css
+++ b/main.css
@@ -5,4 +5,23 @@
 
 body {
 	background-color: #000000;
+	margin: 0 10% 0 10%;
+}
+
+h1 {
+	
+}
+
+hr {
+	margin: 2% 0 2% 0;
+}
+
+article {
+	background-color: #0F0F0F;
+	padding: 0.1px 15px 20px 15px;
+	max-width: 25%;
+}
+
+img {
+	max-width: 100%;
 }
