--- a/main.css
+++ b/main.css
@@ -9,19 +9,74 @@ body {
 }
 
 h1 {
-	
+	font-size: 3vw;
+	padding-top: 2vh;
+}
+
+.menu {
+	display: flex;
+	margin: 0 0 0 0;
+	padding: 0 0 0 0;
+}
+
+.menu li {
+	margin: 0px 10px 0px 0px;
+	list-style-type: none;
+	font-size: 1.2vw;
+	height: 1.4vw;
+}
+
+.menu li a {
+	text-decoration: none;
+}
+
+.menu li a:hover {
+	font-size: 1.3vw;
+	color: #777777;
 }
 
 hr {
-	margin: 2% 0 2% 0;
+	margin: 1% 0 1% 0;
 }
 
-article {
+main {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
+.article_port {
 	background-color: #0F0F0F;
 	padding: 0.1px 15px 20px 15px;
-	max-width: 25%;
+	margin: 5px 5px 5px 5px;
+	max-width: 22%;
+	min-width: 20%;
+}
+
+.article_other {
+	flex-basis: 98%;
+	flex-shrink: 0;
+	padding: 0.1px 15px 20px 15px;
+	margin: 5px 5px 5px 5px;
+	background-color: #0F0F0F;
 }
 
 img {
 	max-width: 100%;
 }
+
+article a {
+	text-decoration: none;
+}
+
+article a:hover {
+	color: #777777;
+}
+
+
+
+
+.article_other img {
+	width: 55%;
+}
+
