--- a/main.css
+++ b/main.css
@@ -5,7 +5,10 @@
 
 body {
 	background-color: #000000;
-	margin: 0 10% 0 10%;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0 10% 0 10%;
 }
 
 h1 {
